# FitLater

./: .gitignore  LICENSE  License  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  engine.py  util.py
examples/: problems.csv  sample.csv
fitlater/: __init__.py  __main__.py  config.py  main.py  pipeline.py
fitlater/advisory/: constant_column.py  correlation.py  distribution.py  duplicates.py  engine.py  imbalance.py  missing.py  outliers.py  strategies.py  type_issues.py  util.py
fitlater/cli/: commands.py  formatter.py  parser.py  runner.py
fitlater/core/: base.py  categorical.py  contract.py  correlation.py  engine.py  numeric.py  others.py  outliers.py  overview.py  schema.py  test.ipynb  visualization.py
fitlater/diagnostics/: base.py  constant_column.py  correlation.py  distribution.py  duplicates.py  engine.py  imbalance.py  missing.py  outliers.py  type_issues.py
fitlater/profile/: column.py  profiler.py  stats.py
fitlater/state/: session.py
frontend/: index.html
frontend/js/: chart.js  main.js  navbar.js  sidebar.js
frontend/styles/: about.css  analytics.css  components.css  contact.css  dashboard.css  layout.css  navbar.css  overview.css  sidebar.css
tests/: test_correlation.py  test_formatter.py  test_outliers  test_outliers.py  test_overview.py
tests/advisory/: test_adv_constant.py  test_adv_correlation.py  test_adv_distribution.py  test_adv_duplicates.py  test_adv_engine.py  test_adv_imbalance.py  test_adv_missing.py  test_adv_outliers.py  test_adv_strategies.py  test_adv_type_issues.py  test_adv_util.py  test_corr_advisory.py  test_distribution_advisory.py  test_engine.py  test_integration_advisory.py  test_missing_advisory.py  test_outlier_advisory.py
tests/cli/: test_desc_formatter.py
tests/descriptive/: test_core_base.py  test_core_categorical.py  test_core_contract.py  test_core_engine.py  test_core_numeric.py  test_core_others.py  test_core_schema.py  test_core_visualization.py  test_correlation.py  test_outliers.py  test_overview.py
tests/diagnostics/: test_corr_diag.py  test_diag_base.py  test_diag_constant_column.py  test_diag_correlation.py  test_diag_distribution.py  test_diag_duplicates.py  test_diag_engine.py  test_diag_imbalance.py  test_diag_missing.py  test_diag_outliers.py  test_diag_type_issues.py  test_distribution.py  (+2 more)
(+7 files in other folders)
