[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitlater"
version = "0.1.0"
description = "Interactive CLI for exploratory data analysis before model building"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
fitlater = "fitlater.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fitlater*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
